# asmr

./: Cargo.toml
C++/: Makefile  client.cpp  host.cpp  libasmr.h  main.h  readme.txt
config_example/: arrr.json  piratechain.json  veruscoin.json
docs/: setup-notes-arrr-btc.md  setup-notes-vrsc-btc.md  setup-notes-zec-btc.md
src/: cli.rs  lib.rs  main.rs
src/coins/: mod.rs
src/coins/arrr/: client.rs  engine.rs  verifier.rs
src/coins/btc/: engine.rs  host.rs  rpc.rs  verifier.rs
src/coins/vrsc/: client.rs  engine.rs  verifier.rs
src/crypt_engines/: ed25519_engine.rs  jubjub_engine.rs  mod.rs  secp256k1_engine.rs
src/tests/: btc_and_arrr.rs  mod.rs
src/tests/coin_specific/: arrr.rs  mod.rs
