[package]
name = "asmr"
version = "0.1.0"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"

[lib]
name = "asmr"
path = "src/lib.rs"
crate-type=["staticlib"]

[dependencies]
getrandom = "= 0.2"
crc16 = "*"
async-trait = "= 0.1.36"
lazy_static = "= 1.4.0"
hex-literal = "= 0.3.1"
hex = "= 0.4.2"
#0.1.1 doesn't want to link. Auto downloaeded 0.1.2 in the past
enum-utils = "= 0.1.2"
#0.3.2 doesn't want to build. Auto downloaded 0.3.7 in the past.
enum_dispatch = "= 0.3.7"
anyhow = "= 1.0.32"
# futures 0.3.5 not available?
futures = "= 0.3.13"
#tokio = { version = "= 0.2.6", features = ["full"] }
tokio = { version = "= 0.2.25", features = ["full"] }
log = "= 0.4.8"
env_logger = "= 0.7.1"
structopt = "= 0.3.16"
rand = { version = "= 0.7.3", features = ["std"] }
bigint = "= 4.4.3"
digest = "= 0.9.0"
sha2 = "= 0.9.1"
blake2 = "= 0.9.0"
rust-argon2 = "= 0.8.2"
secp256kfun = { version = "= 0.1.5", features = ["serialization"] }
curve25519-dalek = { version = "= 2.1.0", features = ["serde"] }
serde = { version = "= 1.0.114", features = ["derive"] }
derive_more = "= 0.99.9"
bincode = "= 1.3.1"
serde_json = "= 1.0.56"
reqwest = { version = "= 0.10.6", features = ["json"] }
bitcoin = "= 0.23.0"
nanocurrency-types = "= 0.3.19"
num_cpus = "= 1.13.0"
monero = "= 0.8.1"
digest_auth = "= 0.2.3"
ff = "= 0.8"
group = "= 0.8"
jubjub = "= 0.5.1"
zcash_primitives = "= 0.5.0"
zcash_proofs = "= 0.5.0"
zcash_client_backend = "= 0.5.0"
libc = "= 0.2.95"
pin-project = "= 1.0.7"
pin-project-internal = "= 1.0.7"
subtle = "= 2.4.0"
synstructure = "= 0.12.4"
tinyvec = "= 1.2.0"
zeroize = "= 1.3.0"
#auto downloading 0.13.7, force 0.13.10, 0.14.2
hyper = "= 0.13.7"
secp256k1 = "= 0.17.2"
secp256k1-sys = "= 0.1.2"
#secp256kfun_parity_backend = "= 0.1.1"
typenum = "= 1.12.0"
crunchy = "= 0.2.2"
byteorder = "= 1.3.4"
byte-tools = "= 0.3.1"
#subtle = "= 2.2.3"
#getrandom = "= 0.1.14"
cfg-if = "= 0.1.10"
opaque-debug = "= 0.2.3"
fake-simd = "= 0.1.2"
block-padding = "= 0.1.5"
secp256kfun_parity_backend = "= 0.1.1"
generic-array = "= 0.12.3"
rand_core = "= 0.5.1"
block-buffer = "= 0.7.3"
#digest = "= 0.8.1"
#sha2 = "= 0.8.2"

[features]
no_confs = []
test_bitcoin_node = []
test_meros_node = []
test_nano_node = []
test_monero_node = []
test_zcash_node = []

# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3
